--- a/Prueba 1/Prueba.mjml
+++ b/Prueba 1/Prueba.mjml
@@ -12,6 +12,8 @@
 
         <mj-attributes>
             
+            
+
         </mj-attributes>
 
     </mj-head>
@@ -70,17 +72,19 @@
 
         </mj-section>
 
-<!-- IMG + TXT -->
+<!-- NEW #1 -->
 
         <mj-section background-color="white" padding="1px">
-            
-            <mj-column>
 
 <!-- IMG -->
+
+            <mj-column>
 
             <mj-image width="250px" height="250px" src="https://i.imgur.com/YVRWVQO.jpeg" alt="" />
                 
             </mj-column>
+
+<!-- TXT -->
 
             <mj-column>
 
@@ -100,14 +104,14 @@
 
             </mj-column>
 
-            
-
         </mj-section>
 
-<!-- TXT + IMG -->
+<!-- NEW# 2-->
 
         <mj-section background-color="black" padding="1px">
             
+<!-- TXT -->
+
             <mj-column>
                 
             <mj-text align="justify" color="#FFF">
@@ -126,6 +130,8 @@
 
             </mj-column>
 
+<!-- IMG + TXT -->
+
             <mj-column>
 
                 <mj-image width="250px" height="250px" src="https://i.imgur.com/YoELavj.jpeg" alt="" />
@@ -134,7 +140,41 @@
 
         </mj-section>
 
-        <!-- Little gray bar x2 -->
+<!-- NEW #3 -->
+
+        <mj-section background-color="white" padding="1px">
+            
+<!-- IMG -->
+
+            <mj-column>
+
+            <mj-image width="250px" height="250px" src="https://i.imgur.com/YVRWVQO.jpeg" alt="" />
+                
+            </mj-column>
+
+<!-- TXT -->
+
+            <mj-column>
+
+                <mj-text align="justify" color="#000">
+                    
+                    <h1>NOTICIA #3</h1>
+
+                </mj-text> 
+
+                    <mj-divider border-width="5px"  border-color="#000" />
+                
+                <mj-text align="justify" color="#000">
+                    
+                    lLorem ipsum dolor sit amet, consectetur adipiscing elit., vitae tempus diam elit nec sem. Vestibulum tincidunt neque et odio imperdiet, vitae maximus lorem lacinia. Suspendisse sit amet fringilla ligula, sit amet efficitur leo. 
+
+                </mj-text> 
+
+            </mj-column>
+
+        </mj-section>
+
+<!-- Little gray bar x2 -->
 
     <mj-section background-color="gray" padding="0">
         
@@ -150,22 +190,80 @@
 
     </mj-section>
 
-        <!-- Footer -->
 
-        <mj-section background-color="white">
+<!-- Footer -->
+
+        <mj-section padding="0px" background-color="black">
+            
+            <mj-column>
+            
+                <mj-text color="white" font-size="12px" align="center">
+            
+                    Organizan:
+            
+                </mj-text>
+            
+            </mj-column>
+        
+        </mj-section>
+
+<!-- Organizer's IMGs -->
+
+        <mj-section background-color="black" padding="0px">
 
             <mj-column>
                 
-                <mj-image src="https://i.imgur.com/GTGxPJ3.jpeg"/ >
-                
+                <mj-image src="https://i.imgur.com/6cxhDbU.png"/ width="200px">
+
             </mj-column>
 
             <mj-column>
-    
-    
-    
+
+                    <mj-image src="https://i.imgur.com/GTGxPJ3.jpeg"/ width="200px">
+
+                </mj-column>
+
+        </mj-section>
+
+        <mj-section background-color="black" padding="0px">
+            
+            <mj-column>
+
+                <mj-text color="white" font-size="12px" align="center">
+                    Siguenos:
+                </mj-text>
+
             </mj-column>
 
+        </mj-section>
+
+<!-- Social's IMGs -->
+
+        <mj-section background-color="black" padding="0px">
+
+            <mj-column vertical-align="middle">
+
+                <mj-image src="https://i.imgur.com/zMYFLaz.png"/ width="50px">
+
+            </mj-column>
+
+            <mj-column>
+
+                <mj-image src="https://i.imgur.com/eUQGpOl.png"/ width="50px">
+
+            </mj-column>
+
+            <mj-column>
+
+                <mj-image src="https://i.imgur.com/ntjDcRm.png"/ width="50px">
+
+            </mj-column>
+
+            <mj-column>
+
+                <mj-image src="https://i.imgur.com/u8duigX.png"/ width="50px">
+
+            </mj-column>
         </mj-section>
 
     </mj-body>
