--- a/Prueba-1/Prueba.mjml
+++ b/Prueba-1/Prueba.mjml
@@ -52,7 +52,7 @@
 
             <mj-column background-color="#fff" padding="0px" >
 
-                <mj-image href="https://www.saloncomicvalencia.com/" src="http://52.22.143.212/imagenes_mjml/FaceBook.png" alt="https://i.imgur.com/GTGxPJ3.jpeg" />
+                <mj-image href="https://www.saloncomicvalencia.com/" src="https://i.imgur.com/GTGxPJ3.jpeg" alt="https://i.imgur.com/GTGxPJ3.jpeg" />
 
             </mj-column>
 
@@ -161,7 +161,7 @@
 
 <mj-column width="60%">
 
-            <mj-image width="1000px" height="300px" href="https://www.saloncomicvalencia.com/la-zona-jocrol-del-salon-del-comic-de-valencia-regresa-a-la-comar-con-de-torrevieja/" src="http://52.22.143.212imagenes_mjml/54210065341_5eb2d1f367_h.jpeg" alt="https://i.imgur.com/DHBNm04.jpeg" />
+            <mj-image width="1000px" height="300px" href="https://www.saloncomicvalencia.com/la-zona-jocrol-del-salon-del-comic-de-valencia-regresa-a-la-comar-con-de-torrevieja/" src="https://i.imgur.com/DHBNm04.jpeg"  alt="https://i.imgur.com/DHBNm04.jpeg" />
 
             </mj-column>
 
@@ -217,11 +217,11 @@
 
             <mj-column>
 
-                <mj-image href="https://www.feriavalencia.com/" src="http://52.22.143.212/imagenes_mjml/cropped-Logosin-2048x844-removebg-preview.png" width="200px" alt="https://i.imgur.com/6cxhDbU.png" />
+                <mj-image href="https://www.feriavalencia.com/" src="https://i.imgur.com/6cxhDbU.png" width="200px" alt="https://i.imgur.com/6cxhDbU.png" />
 
             </mj-column>
 
-            <mj-column>
+            <mj-column background-color="#FFF">
 
                     <mj-image href="https://www.saloncomicvalencia.com/" src="http://52.22.143.212/imagenes_mjml/cropped-Logosin-2048x844-removebg-preview.png" width="200px" alt="https://i.imgur.com/GTGxPJ3.jpeg" />
 
